<resources>
    <string name="app_name">ConstraintLayout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">约束布局示例</string>
    <string name="nav_header_subtitle">各种特性属性的使用</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_base">Base</string>
    <string name="menu_base2">Base2</string>
    <string name="menu_base3">Base3</string>
    <string name="menu_weight">Weight</string>
    <string name="menu_weight2">Weight2</string>
    <string name="menu_baseline">Baseline</string>
    <string name="menu_circle">Circle</string>
    <string name="menu_width">Width</string>
    <string name="menu_bias">Bias</string>
    <string name="menu_gone_margin">GoneMargin</string>
    <string name="menu_chain_style">ChainStyle</string>
    <string name="menu_dimension_ratio">DimensionRatio</string>
    <string name="menu_percent">Percent</string>
    <string name="menu_guideline">Guideline</string>
    <string name="menu_group">Group</string>
    <string name="menu_layer">Layer</string>
    <string name="menu_barrier">Barrier</string>
    <string name="menu_circular_reveal">CircularReveal</string>
    <string name="menu_placeholder">Placeholder</string>
    <string name="menu_constraint_set">ConstraintSet</string>
    <string name="menu_constraint_set2">ConstraintSet2</string>
    <string name="menu_flow">Flow</string>
    <string name="menu_replace_layout">ReplaceLayout</string>
</resources>